Created a server.js file that holds the express connections to the database. Establishes a connection and is capable of pulling data from it.
BREAKS WHEN THE PAGE IS REFRESHED! I have no idea how to fix this or how to connect it to the react app itself.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "emtapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "react": "^16.5.2",
