--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mysql": "^2.16.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "victory": "^30.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
